Fixing html when used on small monitors

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,13 +1,13 @@
 body {
     background-color: #111;
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    min-width: 100vw;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #fff;
 }
